--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-calendar-strip": "^2.2.6",
     "react-native-card-flip": "^1.0.7",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-flip-card": "^3.5.7",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-reanimated-carousel": "^3.3.0",
